--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 
         <!--Local files-->
-        <link rel="stylesheet" href="/miazmb/wwwroot/css/main.css">
+        <link rel="stylesheet" href="/wwwroot/css/main.css">
 
         <title>Miaz FFXIV MB</title>
     </head>
@@ -43,10 +43,13 @@
                     </div>
                 </div>
             </div>
+            <div class="modal-box">
+                <!--modal goes in here-->
+            </div>
         </main>
         <footer>
 
         </footer>
-        <script src="/miazmb/wwwroot/js/main.js"></script>
+        <script src="/wwwroot/js/main.js"></script>
     </body>
 </html>
