updated external references

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
         <!--Local files-->
         <link rel="stylesheet" href="/wwwroot/css/main.css">
+        <link rel="stylesheet" href="/miazmb//wwwroot/css/main.css">
 
         <title>Miaz FFXIV MB</title>
     </head>
@@ -51,5 +52,6 @@
 
         </footer>
         <script src="/wwwroot/js/main.js"></script>
+        <script src="/miazmb/wwwroot/js/main.js"></script>
     </body>
 </html>
