can change plot result amount, can display all quality or either or

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </header>
         <main id="main">
             <div class="container">
-                <div id="debug-box">
+                <div id="debug-box" style="display: none">
                     <button class="btn btn-primary" id="debug-box-toggle">SHOW DEBUG</button>
                     <div id="debug-box-controls"></div>
                 </div>
@@ -37,7 +37,7 @@
                     <div class="modal fade" id="server-modal-container">
                     </div>
                     <div class="container">
-                        <h5 class="mx-auto"> Searching Market Board of: <span id="server-title"></span></h5>
+                        <h5 class="mx-auto"> Searching Market Board of: <span id="server-title"> </span><sup><a id='change-server-link' href='#'>(Change?)</a></sup></h5>
                         <input type="text" class="form-control" id="item-search" placeholder="Type to begin searching">
                     </div>
                     <div id="search-results">
